--- a/public/less/sudoku.less
+++ b/public/less/sudoku.less
@@ -134,7 +134,7 @@
   width: 165px;
 
   .sudoku-controls-row {
-    margin-bottom: 6px;
+    margin-bottom: 5px;
   }
 
   .mark-mode,
@@ -148,93 +148,94 @@
   .undo-move,
   .redo-move {
     &.btn {
-      width: 54%;
+      width: 83px;
     }
   }
 }
 
 .sudoku-numpad {
-  /*display: none;*/
-}
+  margin: 24px 0;
 
-.sudoku-numpad table {
-  margin-left: 1px;
+  table {
+    margin-left: 1px;
 
-  &.popup {
-    position: absolute;
-  }
+    &.popup {
+      position: absolute;
+    }
 
-  tr {
-    &:first-child {
-      .number {
-        &:first-child {
-          .border-radius-mixin(3px 0 0 0);
+    tr {
+      &:first-child {
+        .number {
+          &:first-child {
+            .border-radius-mixin(3px 0 0 0);
+          }
+
+          &:last-child {
+            .border-radius-mixin(0 3px 0 0);
+          }
         }
+      }
 
-        &:last-child {
-          .border-radius-mixin(0 3px 0 0);
+      .number.clear {
+        .border-radius-mixin(0 0 3px 3px);
+      }
+    }
+
+    .number {
+      border-color: #ccc;
+      border-style: solid;
+      border-width: 1px;
+
+      border-bottom-color: #b3b3b3;
+      //    border: @sudoku-numpad-default-number-border;
+
+      float: left;
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1.2em;
+      line-height: 46px;
+      background-color: @sudoku-numpad-default-number-background-color;
+      width: @sudoku-numpad-default-number-width;
+      height: @sudoku-numpad-default-number-height;
+      margin: @sudoku-numpad-default-number-margin;
+      padding: @sudoku-numpad-default-number-padding;
+
+      .box-sizing-mixin(@sudoku-numpad-default-number-box-sizing);
+      .linear-gradient-mixin(#fff, #e6e6e6);
+
+      &.disabled {
+        color: #999;
+        padding-top: @sudoku-numpad-default-number-padding-top + 1;
+        background-color: @sudoku-numpad-default-number-disabled-background-color;
+        font-weight: normal;
+
+        .linear-gradient-mixin(@sudoku-numpad-default-number-disabled-background-color, @sudoku-numpad-default-number-disabled-background-color);
+      }
+
+      &.clear {
+        height: 30px;
+        line-height: 22px;
+        width: @sudoku-numpad-default-clear-width;
+      }
+
+      &.enabled {
+        &:hover,
+        &.hover {
+          background-color: @sudoku-numpad-default-number-hover-background-color;
+          .linear-gradient-mixin(#e6e6e6, #fff);
         }
       }
     }
 
-    .number.clear {
-      .border-radius-mixin(0 0 3px 3px);
-    }
-  }
-
-  .number {
-    border-color: #ccc;
-    border-style: solid;
-    border-width: 1px;
-
-    border-bottom-color: #b3b3b3;
-    //    border: @sudoku-numpad-default-number-border;
-
-    float: left;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 2em;
-    line-height: 46px;
-    background-color: @sudoku-numpad-default-number-background-color;
-    width: @sudoku-numpad-default-number-width;
-    height: @sudoku-numpad-default-number-height;
-    margin: @sudoku-numpad-default-number-margin;
-    padding: @sudoku-numpad-default-number-padding;
-
-    .box-sizing-mixin(@sudoku-numpad-default-number-box-sizing);
-    .linear-gradient-mixin(#fff, #e6e6e6);
-
-    &.disabled {
-      color: #999;
-      padding-top: @sudoku-numpad-default-number-padding-top + 1;
-      background-color: @sudoku-numpad-default-number-disabled-background-color;
-      font-weight: normal;
-
-      .linear-gradient-mixin(@sudoku-numpad-default-number-disabled-background-color, @sudoku-numpad-default-number-disabled-background-color);
+    .none {
+      visibility: hidden;
     }
 
-    &.clear {
-      width: @sudoku-numpad-default-clear-width;
-      padding-top: 0;
+    .close {
+      cursor: pointer;
     }
-
-    &.enabled {
-      &:hover,
-      &.hover {
-        background-color: @sudoku-numpad-default-number-hover-background-color;
-        .linear-gradient-mixin(#e6e6e6, #fff);
-      }
-    }
-  }
-
-  .none {
-    visibility: hidden;
-  }
-
-  .close {
-    cursor: pointer;
   }
 }
 
