--- a/application/modules/sudoku/views/scripts/_columns/my-rating.phtml
+++ b/application/modules/sudoku/views/scripts/_columns/my-rating.phtml
@@ -1,6 +1,8 @@
 <?php
 $users = $this->topUsersRating;
 $difficulties = $this->difficulties ?: [];
+// TODO: turned off
+return '';
 ?>
 <?php if (!empty($users)): ?>
     <div class="section my-rating-container">
