--- a/public/less/common.less
+++ b/public/less/common.less
@@ -4,104 +4,6 @@
 .main-container {
   width: 100%;
   min-width: @common-center-column-min-width + 10;
-  background-color: @common-background-color;
-
-  .left-column,
-  .center-column,
-  .right-column {
-    padding-top: @navigation-panel-navigation-panel-real-height + 20;
-  }
-}
-
-.left-column {
-  float: left;
-  width: @common-left-column-width;
-}
-
-.center-column {
-  margin-left: @common-left-column-width;
-  margin-right: @common-right-column-width;
-  min-width: @common-center-column-min-width;
-  background-color: @common-center-column-background-color;
-  border-left: @common-center-column-border-left;
-  border-right: @common-center-column-border-right;
-  padding-right: @common-center-column-padding-right;
-  padding-left: @common-center-column-padding-left;
-
-  .content {
-    margin: 0 auto;
-    width: @common-center-column-min-width;
-  }
-}
-
-.right-column {
-  float: right;
-  width: @common-right-column-width;
-  font-size: @common-right-column-font-size;
-
-  .section {
-    margin: @common-right-column-section-margin;
-    padding: @common-right-column-section-padding;
-
-    .change-difficulty {
-      margin-bottom: @common-right-column-section-change-difficulty-margin-bottom;
-      height: @common-right-column-section-change-difficulty-height;
-      width: @common-right-column-section-change-difficulty-width;
-    }
-
-    .section-title {
-      font-weight: @common-right-column-section-section-title-font-weight;
-      margin-bottom: @common-right-column-section-section-title-margin-bottom;
-      font-size: @common-right-column-section-section-title-font-size;
-      border-top: @common-right-column-section-section-title-border-top;
-    }
-
-    .show-games-history-container,
-    .show-top-user-ratings-container {
-      text-align: right;
-    }
-
-    table {
-      width: 100%;
-
-      tr {
-        background-color: @common-right-column-table-tr-background-color;
-
-        &.head {
-          background-color: inherit;
-        }
-        &.even {
-          background-color: @common-right-column-table-tr-even-background-color;
-        }
-
-        &.me {
-          font-weight: @common-right-column-table-tr-me-font-weight;
-          border-top: @common-right-column-table-tr-me-border-top;
-          border-right: @common-right-column-table-tr-me-border-right;
-          border-bottom: @common-right-column-table-tr-me-border-bottom;
-          border-left: @common-right-column-table-tr-me-border-left;
-        }
-      }
-
-      th {
-        padding: @common-right-column-table-th-padding;
-      }
-
-      td {
-        text-align: center;
-      }
-
-      &.games-history {
-        tr {
-          &.hlink {
-            &:hover {
-              background-color: lighten(@common-right-column-table-tr-background-color, 10%);
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
 .game-state {
@@ -141,3 +43,33 @@
 .image-info {
   font-size: 12px;
 }
+
+.content-blocker {
+  .blocker-backdrop {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+
+    .opacity-mixin(.8);
+  }
+
+  .blocker-content {
+    position: absolute;
+    top: 40%;
+    text-align: center;
+    font-size: 100px;
+    line-height: 100px;
+    color: #000;
+    width: 100%;
+
+    .opacity-mixin(.5);
+  }
+}
+
+
