--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -3,6 +3,8 @@
 @import "core";
 @import "common";
 
+@import "columns";
+
 @import "breadcrumbs";
 @import "create-game";
 @import "navigation-panel";
@@ -11,3 +13,5 @@
 @import "user-games-history";
 
 @import "sudoku";
+
+@import "z-index";
