--- a/public/less/sudoku-variables.less
+++ b/public/less/sudoku-variables.less
@@ -35,10 +35,11 @@
 @sudoku-numpad-default-table-background-color: #ddd;
 @sudoku-numpad-default-table-border-radius: 3px;
 
-@sudoku-numpad-default-number-background-color: #fff;
 @sudoku-numpad-default-number-width: 56px;
 @sudoku-numpad-default-number-height: @sudoku-numpad-default-number-width;
-@sudoku-numpad-default-number-border: 1px solid #000;
+@sudoku-numpad-default-number-border-width: 1px;
+@sudoku-numpad-default-number-border-style: solid;
+@sudoku-numpad-default-number-border-color: #ccc #ccc #b3b3b3;
 @sudoku-numpad-default-number-margin: -1px;
 @sudoku-numpad-default-number-padding-top: 3px;
 @sudoku-numpad-default-number-padding-right: 0;
@@ -46,6 +47,9 @@
 @sudoku-numpad-default-number-padding-left: 0;
 @sudoku-numpad-default-number-padding: @sudoku-numpad-default-number-padding-top @sudoku-numpad-default-number-padding-right @sudoku-numpad-default-number-padding-bottom @sudoku-numpad-default-number-padding-left;
 @sudoku-numpad-default-number-box-sizing: border-box;
+@sudoku-numpad-default-number-background-color: #fff;
+@sudoku-numpad-default-number-gradient-start: @sudoku-numpad-default-number-background-color;
+@sudoku-numpad-default-number-gradient-end: #e6e6e6;
 
 @sudoku-numpad-default-number-disabled-background-color: #ddd;
 
