--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,33 +36,199 @@ ul {
 .main-container {
   width: 100%;
   min-width: 610px;
-  background-color: #dbcfc1;
 }
-.main-container .left-column, .main-container .center-column, .main-container .right-column {
+.game-state {
+  font-weight: bold;
+}
+.game-state.new {
+  color: #2d00b0;
+}
+.game-state.in_progress {
+  color: #0d9cd3;
+}
+.game-state.paused {
+  color: #bd561d;
+}
+.game-state.finished {
+  color: #14b000;
+}
+.to-top {
+  width: 200px;
+  border-top: 1px solid #998877;
+  padding: 50px 0;
+  margin: 30px auto 0;
+  text-align: center;
+}
+/**************************************** other ***************************************/
+.select-disabled {
+  -moz-user-select: '-moz-none';
+  -moz-user-select: 'none';
+  -o-user-select: 'none';
+  -khtml-user-select: 'none';
+  -webkit-user-select: 'none';
+  -ms-user-select: 'none';
+  user-select: 'none';
+  -moz-user-select: '-moz-none';
+  -moz-user-select: 'none';
+  -o-user-select: 'none';
+  -khtml-user-select: 'none';
+  -webkit-user-select: 'none';
+  -ms-user-select: 'none';
+  user-select: 'none';
+  -moz-user-select: '-moz-none';
+  -moz-user-select: 'none';
+  -o-user-select: 'none';
+  -khtml-user-select: 'none';
+  -webkit-user-select: 'none';
+  -ms-user-select: 'none';
+  user-select: 'none';
+  -moz-user-select: '-moz-none';
+  -moz-user-select: 'none';
+  -o-user-select: 'none';
+  -khtml-user-select: 'none';
+  -webkit-user-select: 'none';
+  -ms-user-select: 'none';
+  user-select: 'none';
+  -moz-user-select: '-moz-none';
+  -moz-user-select: 'none';
+  -o-user-select: 'none';
+  -khtml-user-select: 'none';
+  -webkit-user-select: 'none';
+  -ms-user-select: 'none';
+  user-select: 'none';
+}
+.image-info {
+  font-size: 12px;
+}
+.content-blocker .blocker-backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+.content-blocker .blocker-content {
+  position: absolute;
+  top: 40%;
+  text-align: center;
+  font-size: 100px;
+  line-height: 100px;
+  color: #000;
+  width: 100%;
+  -khtml-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=80);
+}
+/********************************** common columns parameters *********************************/
+.left-column, .center-column, .right-column {
+  overflow: auto;
+  top: 0;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.left-column .column-container, .center-column .column-container, .right-column .column-container {
   padding-top: 61px;
 }
 .left-column {
-  float: left;
+  position: absolute;
+  left: 0;
   width: 300px;
+  background-color: #dbcfc1;
+  border-right: 1px solid #998877;
 }
 .center-column {
-  margin-left: 300px;
-  margin-right: 300px;
+  position: fixed;
+  right: 300px;
+  bottom: 0;
+  left: 300px;
   min-width: 600px;
   background-color: #ffffff;
-  border-left: 1px solid #998877;
-  border-right: 1px solid #998877;
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.center-column .content {
-  margin: 0 auto;
-  width: 600px;
 }
 .right-column {
-  float: right;
+  position: absolute;
+  right: 0;
+  left: auto;
   width: 300px;
+  background-color: #dbcfc1;
+  border-left: 1px solid #998877;
   font-size: 12px;
+}
+/********************************** left column *********************************/
+/********************************** center column *********************************/
+.center-column .content {
+  margin: 0 auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  width: 600px;
+}
+/********************************** right column *********************************/
+.right-column .show-new-game-form, .right-column .pause-game-button {
+  width: 100%;
 }
 .right-column .section {
   margin: 0 15px;
@@ -110,55 +276,6 @@ ul {
 .right-column .section table.games-history tr.hlink:hover {
   background-color: #ffffff;
 }
-.game-state {
-  font-weight: bold;
-}
-.game-state.new {
-  color: #2d00b0;
-}
-.game-state.in_progress {
-  color: #0d9cd3;
-}
-.game-state.paused {
-  color: #bd561d;
-}
-.game-state.finished {
-  color: #14b000;
-}
-.to-top {
-  width: 200px;
-  border-top: 1px solid #998877;
-  padding: 50px 0;
-  margin: 30px auto 0;
-  text-align: center;
-}
-/**************************************** other ***************************************/
-.select-disabled {
-  -moz-user-select: '-moz-none';
-  -moz-user-select: 'none';
-  -o-user-select: 'none';
-  -khtml-user-select: 'none';
-  -webkit-user-select: 'none';
-  -ms-user-select: 'none';
-  user-select: 'none';
-  -moz-user-select: '-moz-none';
-  -moz-user-select: 'none';
-  -o-user-select: 'none';
-  -khtml-user-select: 'none';
-  -webkit-user-select: 'none';
-  -ms-user-select: 'none';
-  user-select: 'none';
-  -moz-user-select: '-moz-none';
-  -moz-user-select: 'none';
-  -o-user-select: 'none';
-  -khtml-user-select: 'none';
-  -webkit-user-select: 'none';
-  -ms-user-select: 'none';
-  user-select: 'none';
-}
-.image-info {
-  font-size: 12px;
-}
 .breadcrumbs {
   float: left;
   font-size: 1em;
@@ -168,6 +285,16 @@ ul {
 }
 .breadcrumbs .ficon-home {
   font-size: 25px;
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
   -khtml-opacity: 0.8;
   -moz-opacity: 0.8;
   opacity: 0.8;
@@ -237,6 +364,28 @@ ul {
   background: -ms-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
   background: linear-gradient(to bottom, #ffeedd 0%, #dbcfc1 100%);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  background-color: #ffeedd;
+  background: -moz-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffeedd), color-stop(100%, #dbcfc1));
+  background: -webkit-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: -o-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: -ms-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: linear-gradient(to bottom, #ffeedd 0%, #dbcfc1 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  background-color: #ffeedd;
+  background: -moz-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffeedd), color-stop(100%, #dbcfc1));
+  background: -webkit-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: -o-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: -ms-linear-gradient(top, #ffeedd 0%, #dbcfc1 100%);
+  background: linear-gradient(to bottom, #ffeedd 0%, #dbcfc1 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
@@ -276,6 +425,12 @@ ul {
   margin-left: -120px;
   width: 120px;
   border: 1px solid #998877;
+  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
@@ -337,6 +492,12 @@ ul {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 .form-message ul {
   list-style-type: none;
@@ -358,6 +519,12 @@ ul {
   vertical-align: middle;
   text-align: center;
   font-size: 12px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -519,6 +686,12 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .sudoku-board .cell.gray {
   background-color: #eeeeee;
@@ -590,8 +763,20 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   -webkit-border-radius: 3px 0 0 0;
   -moz-border-radius: 3px 0 0 0;
   border-radius: 3px 0 0 0;
+  -webkit-border-radius: 3px 0 0 0;
+  -moz-border-radius: 3px 0 0 0;
+  border-radius: 3px 0 0 0;
+  -webkit-border-radius: 3px 0 0 0;
+  -moz-border-radius: 3px 0 0 0;
+  border-radius: 3px 0 0 0;
 }
 .sudoku-numpad table tr:first-child .number:last-child {
+  -webkit-border-radius: 0 3px 0 0;
+  -moz-border-radius: 0 3px 0 0;
+  border-radius: 0 3px 0 0;
+  -webkit-border-radius: 0 3px 0 0;
+  -moz-border-radius: 0 3px 0 0;
+  border-radius: 0 3px 0 0;
   -webkit-border-radius: 0 3px 0 0;
   -moz-border-radius: 0 3px 0 0;
   border-radius: 0 3px 0 0;
@@ -612,12 +797,14 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   -webkit-border-radius: 0 0 3px 3px;
   -moz-border-radius: 0 0 3px 3px;
   border-radius: 0 0 3px 3px;
+  -webkit-border-radius: 0 0 3px 3px;
+  -moz-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
+  -webkit-border-radius: 0 0 3px 3px;
+  -moz-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
 }
 .sudoku-numpad table .number {
-  border-color: #ccc;
-  border-style: solid;
-  border-width: 1px;
-  border-bottom-color: #b3b3b3;
   float: left;
   text-align: center;
   vertical-align: middle;
@@ -625,11 +812,14 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   font-weight: bold;
   font-size: 1.2em;
   line-height: 46px;
-  background-color: #ffffff;
   width: 56px;
   height: 56px;
   margin: -1px;
   padding: 3px 0 0 0;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #cccccc #cccccc #b3b3b3;
+  background-color: #ffffff;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -639,6 +829,28 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  background: -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #e6e6e6));
+  background: -webkit-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: -o-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: -ms-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: linear-gradient(to bottom, #ffffff 0%, #e6e6e6 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  background-color: #ffffff;
+  background: -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #e6e6e6));
+  background: -webkit-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: -o-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: -ms-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
+  background: linear-gradient(to bottom, #ffffff 0%, #e6e6e6 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
   background-color: #ffffff;
   background: -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #e6e6e6));
@@ -664,11 +876,44 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   background: linear-gradient(to bottom, #ffffff 0%, #e6e6e6 100%);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
 }
+.sudoku-numpad table .number:active {
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
+}
 .sudoku-numpad table .number.disabled {
   color: #999;
   padding-top: 4px;
   background-color: #dddddd;
   font-weight: normal;
+  background-color: #dddddd;
+  background: -moz-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #dddddd));
+  background: -webkit-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: -o-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: -ms-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: linear-gradient(to bottom, #dddddd 0%, #dddddd 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  background-color: #dddddd;
+  background: -moz-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #dddddd));
+  background: -webkit-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: -o-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: -ms-linear-gradient(top, #dddddd 0%, #dddddd 100%);
+  background: linear-gradient(to bottom, #dddddd 0%, #dddddd 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
   background-color: #dddddd;
   background: -moz-linear-gradient(top, #dddddd 0%, #dddddd 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #dddddd));
@@ -725,6 +970,22 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   background: -ms-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
   background: linear-gradient(to bottom, #e6e6e6 0%, #ffffff 100%);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  background-color: #e6e6e6;
+  background: -moz-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e6e6e6), color-stop(100%, #ffffff));
+  background: -webkit-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: -o-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: -ms-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: linear-gradient(to bottom, #e6e6e6 0%, #ffffff 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
+  background-color: #e6e6e6;
+  background: -moz-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e6e6e6), color-stop(100%, #ffffff));
+  background: -webkit-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: -o-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: -ms-linear-gradient(top, #e6e6e6 0%, #ffffff 100%);
+  background: linear-gradient(to bottom, #e6e6e6 0%, #ffffff 100%);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffeedd', endColorstr='#dbcfc1', GradientType=0);
 }
 .sudoku-numpad table .none {
   visibility: hidden;
@@ -746,7 +1007,27 @@ body.user-games-history .center-column table.games-history.games-history tr.hlin
   font-size: 25px;
   line-height: 30px;
 }
-/********************************** right col *********************************/
-.show-new-game-form {
-  width: 100%;
+.center-column {
+  z-index: 1100;
+}
+.content-blocker {
+  z-index: 1200;
+}
+.content-blocker.blocker-content, .content-blocker .blocker-backdrop {
+  z-index: 1200;
+}
+.left-column, .right-column {
+  z-index: 1300;
+}
+.footer-panel {
+  z-index: 1400;
+}
+.modal-backdrop {
+  z-index: 1500;
+}
+.modal {
+  z-index: 1600;
+}
+.header-panel, .navigation-panel {
+  z-index: 1700;
 }
