--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -6,6 +6,7 @@
 @link-color: #1541ff;
 @link-hover-color: #d11c22;
 @default-box-shadow: 0 3px 8px rgba(0, 0, 0, .3);
+@default-push-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15);
 @default-text-shadow: 1px 1px 0 #000;
 @default-border-color: #998877;
 
@@ -20,10 +21,8 @@
 @core-a-hover-color: @link-hover-color;
 @core-a-hover-text-decoration: underline;
 
-// Common
-@common-background-color: @navigation-panel-navigation-panel-background-color;
-
 @common-left-column-width: 300px;
+@common-left-column-background-color: @navigation-panel-navigation-panel-background-color;
 
 @common-center-column-min-width: 600px;
 @common-center-column-background-color: #fff;
@@ -34,6 +33,7 @@
 
 @common-right-column-width: 300px;
 @common-right-column-font-size: 12px;
+@common-right-column-background-color: @common-left-column-background-color;
 
 @common-right-column-section-margin: 0 15px;
 @common-right-column-section-padding: 0 0 20px;
